--- a/ContactoDb/Views/Contacto/Listar.cshtml
+++ b/ContactoDb/Views/Contacto/Listar.cshtml
@@ -1,8 +1,41 @@
-﻿
+﻿@model List<ContactoModel>;
 @{
     ViewData["Title"] = "Listar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Listar</h1>
 
+<div class="card col-8">
+    <div class="card-header ">
+        <h1>Listar</h1>
+</div>
+<div class="card-body ">
+        <a asp-action="Guardar" asp-controller="Contacto" class="btn btn-success"> <i class="bi bi-plus-circle"></i> Crea Nuevo Contacto</a>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Telefono</th>
+                    <th>Correo</th>
+                    <th>Clave</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var item in Model)
+                {
+                    <tr>
+                        <td>@item.Nombre</td>
+                        <td>@item.Telefono</td>
+                        <td>@item.Correo</td>
+                        <td>@item.Clave</td>
+                        <td>
+                            <a asp-action="Editar" asp-controller="Contacto" asp-route-idContacto="@item.IdContacto" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"> </i>Editar</a>
+                            <a asp-action="Eliminar" asp-controller="Contacto" asp-route-idContacto="@item.IdContacto" class="btn btn-danger btn-sm"><i class="bi bi-trash"> </i>Eliminar</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+</div>
+</div>
